specs/Pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mypodname
  namespace: mynamespace
spec:
  containers:
  - name: mycontainer
    image: busybox
    command: ['sh','-c','echo $(MY_VAR) && ls -l /config/*']
    volumeMounts:
    - name: myconfigmapvolume
      mountPath: "/config"
      readOnly: true
  # Multi container example
  - name: memory-demo-ctr
    image: polinux/stress
    resources:
      limits:
        memory: "800Mi"
        cpu: "800m"
      requests:
        memory: "600Mi"
        cpu: "400m"
    command: ["stress"]
    args: ["--vm", "1", "--vm-bytes", "150M", "--vm-hang", "1"]  
  volumes:
    - name: myconfigmapvolume
      configMap:
        name: myconfigmap
